Parent DTOs, Mapper, Service, Controller {Update Endpoint and SecurityConfiguration}